--- a/examples/apipixie-basic-server/package.json
+++ b/examples/apipixie-basic-server/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "apipixie-basic-server",
-	"version": "0.1",
+	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
-		"express": "3.x"
+		"express": "3.4.4"
 	}
 }
