--- a/examples/apipixie-basic/pom.xml
+++ b/examples/apipixie-basic/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>com.ligati</groupId>
             <artifactId>apipixie</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1</version>
         </dependency>
         <dependency>
             <groupId>org.simpleframework</groupId>
